@@ -1,3 +1,8 @@
+2006-12-04 Sandro Santilli <strk@refractions.net>
+
+	* tests/unit/geom/CoordinateArraySequenceTest.cpp:
+	  added tests for setOrdinate()
+
 2006-11-30 Sandro Santilli <strk@refractions.net>
 
 	* tests/unit/: Makefile.am, capi/GEOSCoordSeq.cpp:
